--- a/dotNet5782_8995_8035/ConsoleUI/ConsoleUI.csproj
+++ b/dotNet5782_8995_8035/ConsoleUI/ConsoleUI.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BL\BL.csproj" />
     <ProjectReference Include="..\DAL\DAL.csproj" />
   </ItemGroup>
 
