--- a/dotNet5782_8995_8035/PL/PL.csproj
+++ b/dotNet5782_8995_8035/PL/PL.csproj
@@ -7,6 +7,13 @@
     <ApplicationIcon>iconMainWindow.ico</ApplicationIcon>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>..\bin\</OutputPath>
+	<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+	<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="images\8.jpg" />
   </ItemGroup>
