FINISH: CLI adjustment to the architecture, and final code improvements over all the project.

--- a/dotNet5782_8995_8035/BL/BL.csproj
+++ b/dotNet5782_8995_8035/BL/BL.csproj
@@ -14,7 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DalObject\DalObject.csproj" />
     <ProjectReference Include="..\DalXML\DalXML.csproj" />
-    <ProjectReference Include="..\DAL\DalFacade.csproj" />
+    <ProjectReference Include="..\DAL\DAL.csproj" />
   </ItemGroup>
 
 </Project>
