--- a/dotNet5782_8995_8035/ConsoleUI/ConsoleUI.csproj
+++ b/dotNet5782_8995_8035/ConsoleUI/ConsoleUI.csproj
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BL\BL.csproj" />
-    <ProjectReference Include="..\DAL\DalFacade.csproj" />
+    <ProjectReference Include="..\DAL\DAL.csproj" />
   </ItemGroup>
 
 </Project>
